[package]
name = "vsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive", "cargo"] }
color-eyre = "0.6.2"
dirs = "4.0.0"
nix = "0.26.1"
notify-rust = "4.5.10"
regex = "1.7.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
